# assistant

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/web/: Dockerfile  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: layout.tsx  page.tsx  styles.css
infra/: Caddyfile  docker-compose.yml
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/app/: ai_contracts.py  approvals.py  auth.py  calendar_sync.py  config.py  dashboard.py  db.py  github_integration.py  main.py  models.py  ops.py  planning.py  security.py  slack.py
services/api/assistant_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_initial.py
services/api/tests/: test_auth.py  test_calendar_sync.py  test_dashboard_ops.py  test_e2e_contracts.py  test_github_integration.py  test_health.py  test_models.py  test_planning_approval.py  test_security.py  test_slack_ai.py
services/worker/: Dockerfile  pyproject.toml
services/worker/assistant_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/worker/tests/: test_briefing.py  test_healthcheck.py
services/worker/worker_app/: briefing.py  celery_app.py
