[project]
name = "assistant-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115,<1", "uvicorn[standard]>=0.34,<1", "pydantic-settings>=2.7,<3"]

[project.optional-dependencies]
test = ["pytest>=8.3,<9", "httpx>=0.28,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

