[project]
name = "assistant-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["alembic>=1.15,<2", "fastapi>=0.115,<1", "psycopg[binary]>=3.2,<4", "sqlalchemy>=2.0,<3", "uvicorn[standard]>=0.34,<1", "pydantic-settings>=2.7,<3"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
test = ["pytest>=8.3,<9", "httpx>=0.28,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
